--- a/package.json
+++ b/package.json
@@ -16,5 +16,21 @@
     "sliceofperfect"
   ],
   "author": "Oliver Wee",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "debug-log": "^1.0.1",
+    "eslint": "^3.12.2",
+    "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-pug": "^1.0.0",
+    "grunt-contrib-stylus": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "mocha": "^3.2.0",
+    "stylus": "^0.54.5"
+  },
+  "dependencies": {
+    "pug": "^2.0.0-beta6"
+  }
 }
