--- a/package.json
+++ b/package.json
@@ -18,19 +18,33 @@
   "author": "Oliver Wee",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.15.3",
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "browser-sync": "^2.18.6",
+    "browserify": "^13.3.0",
     "chai": "^3.5.0",
     "debug-log": "^1.0.1",
     "eslint": "^3.12.2",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-stylus": "^1.2.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-php": "^1.5.1",
     "mocha": "^3.2.0",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "vue": "^2.1.8",
+    "vue-router": "^2.1.1",
+    "vueify": "^9.4.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "getbasis": "^4.3.2",
     "pug": "^2.0.0-beta6"
   }
 }
